--- a/src/main/resources/templates/email/email_template.html
+++ b/src/main/resources/templates/email/email_template.html
@@ -21,7 +21,7 @@
 <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
     <tr>
         <td align="center" bgcolor="#78ab46" style="padding: 40px 0 30px 0;">
-            <h4><img src="img/logo10.png" width="50px" ; height="50px">
+            <h4><img src="../img/logo10.png" width="50px" ; height="50px">
                 UrWeather.com</h4>
         </td>
     </tr>
