--- a/src/main/resources/templates/page_admin/table.html
+++ b/src/main/resources/templates/page_admin/table.html
@@ -6,24 +6,25 @@
 <div class="ch-container">
     <div class="row">
         <!-- left menu starts -->
-        <div class="col-sm-2 col-lg-2">
-            <div class="sidebar-nav">
-                <div class="nav-canvas">
-                    <div class="nav-sm nav nav-stacked">
+<!--        <div class="col-sm-2 col-lg-2">-->
+<!--            <div class="sidebar-nav">-->
+<!--                <div class="nav-canvas">-->
+<!--                    <div class="nav-sm nav nav-stacked">-->
 
-                    </div>
-                    <ul class="nav nav-pills nav-stacked main-menu">
-                        <li class="nav-header">Main</li>
-                        <li><a class="ajax-link" href="index.html"><i class="glyphicon glyphicon-home"></i><span> Dashboard</span></a>
-                        </li>
-                        <li><a class="ajax-link" th:href="@{/admin}"><i
-                                class="glyphicon glyphicon-align-justify"></i><span> Tables</span></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+<!--                    </div>-->
+<!--                    <ul class="nav nav-pills nav-stacked main-menu">-->
+<!--                        <li class="nav-header">Main</li>-->
+<!--                        <li><a class="ajax-link" href="index.html"><i class="glyphicon glyphicon-home"></i><span> Dashboard</span></a>-->
+<!--                        </li>-->
+<!--                        <li><a class="ajax-link" th:href="@{/admin}"><i-->
+<!--                                class="glyphicon glyphicon-align-justify"></i><span> Tables</span></a></li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <!--/span-->
         <!-- left menu ends -->
+        <div class="col-lg-1 col-sm-1"></div>
 
         <div id="content" class="col-lg-10 col-sm-10">
             <div class="row">
