--- a/src/main/resources/templates/page_error/401.html
+++ b/src/main/resources/templates/page_error/401.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <th:block th:replace="layout/head :: head"></th:block>
-<th:block th:replace="layout/header :: header"></th:block>
-
 <head>
     <!-- The styles -->
     <link id="bs-css" href="css/bootstrap-cerulean.min.css" rel="stylesheet">
@@ -11,7 +9,48 @@
     <link href="css/error.css" rel="stylesheet">
 </head>
 
-<th:block th:replace="layout/header :: header"></th:block>
+<body>
+<!-- topbar starts -->
+<div class="navbar navbar-default" role="navigation">
+
+    <div class="navbar-inner">
+        <button type="button" class="navbar-toggle pull-left animated flip">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" th:href="@{/}"> <img alt="Charisma Logo" src="img/logo10.png"/>
+            <span class="hidden-xs"></span></a>
+
+        <!-- user dropdown starts -->
+        <div class="btn-group pull-right">
+            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <i class="glyphicon glyphicon-user"
+                   th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"><span
+                        class="hidden-sm hidden-xs"
+                >Admin</span></i>
+                <i class="glyphicon glyphicon-user"
+                   th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}"><span class="hidden-sm hidden-xs"
+                > User</span></i>
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li class="nav-item"
+                    th:if="${#authorization.expression('hasRole(''ROLE_USER'')') && #authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+                    <a th:href="@{/admin}">Your Profile</a>
+                </li>
+                <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+                    <a th:href="@{/admin}">Management</a>
+                </li>
+                <li class="divider"></li>
+                <li><a th:href="@{/logout}">Log-out</a></li>
+            </ul>
+        </div>        <!-- user dropdown ends -->
+
+
+    </div>
+</div>
 
 
 <div id="notfound">
