--- a/src/main/resources/templates/page_user/weather_search.html
+++ b/src/main/resources/templates/page_user/weather_search.html
@@ -13,7 +13,7 @@
                    style="text-align: left" th:value="${param.cityName}">
             <div class="input-group-append" style="text-align: right">
                 <button class="btn btn-secondary" type="submit"
-                        style="margin-top: -70px; background-color: #ffffff00;">
+                        style="margin-top: -80px; background-color: #ffffff00;">
                     <i class="glyphicon glyphicon-search"></i>
                 </button>
             </div>
@@ -284,7 +284,7 @@
                                     <div class="action" style="float: right" th:switch="${status}">
                                         <a class="btn btn-primary" th:case="'add'"
                                            th:href="@{/save-weather/__*{cityName}__}"
-                                           style="margin-top: -275px; background-image: linear-gradient(#1e86d5, #274c61 60%, #32454f);">Add</a>
+                                           style="margin-top: -275px; background-image: linear-gradient(#f5f5f5, #000000 60%, #1990ce);">Add</a>
                                         <a class="btn btn-warning" th:case="'update'"
                                            th:href="@{/update-weather/__*{cityName}__}"
                                            style="margin-top: -275px">Update</a>
