--- a/src/main/resources/templates/reset_password/reset_password.html
+++ b/src/main/resources/templates/reset_password/reset_password.html
@@ -7,8 +7,23 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-
-    <title>Forgot Password</title>
+    <style>
+        body {
+            background-image: url('https://www.worldpediatricdental.com/wp-content/uploads/2014/10/blue-cloud-bg.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        .btn-outline-primary {
+            color: #fff;
+            background-color: #06b6ff !important;
+            border-color: #06b6ff !important;
+        }
+        .col-md-offset-4 {
+            margin-top: 60px;
+            margin-left: 33.33333333%;
+        }
+    </style>
+    <title>Reset Password</title>
 </head>
 <body>
 <div class="container">
@@ -69,7 +84,7 @@
                                        th:text="${error}">Validation error</p>
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-block btn-primary">Reset password</button>
+                                    <button type="submit" class="btn btn-block btn-outline-primary">Reset password</button>
                                 </div>
                             </form>
 
